[gd_scene load_steps=3 format=3 uid="uid://cy4ea4hhd28ly"]

[ext_resource type="Script" path="res://Matriz/Nucleo/Sistema Motor/Sistemas de Armas/Amas de Longa Distancia/Script/ArmaDeLongaDistanciaBasica.gd" id="1_7la50"]
[ext_resource type="Texture2D" uid="uid://jeqhjqsy52pp" path="res://Assets/Place Holder/Armas/free-guns-pixel-art/Assaut-rifle-1.png" id="1_m3pi7"]

[node name="ArmaDeLongaDistanciaBasica" type="Node2D"]
script = ExtResource("1_7la50")

[node name="Textura" type="Sprite2D" parent="."]
texture = ExtResource("1_m3pi7")

[node name="TemporizadorDeBalasPorSegundo" type="Timer" parent="."]
one_shot = true

[node name="PontoDeSaida" type="Marker2D" parent="."]
position = Vector2(31, -5)

[node name="AssistenciaDeMira" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 0, 0)
width = 2.0
default_color = Color(0.756863, 0, 0, 1)

[node name="AssistenciaDeMira2" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 0, 0)
width = 2.0
default_color = Color(0.756863, 0, 0, 1)

[node name="VerificadorDeTiroAcertado" type="RayCast2D" parent="."]
collision_mask = 131
hit_from_inside = true
collide_with_areas = true
